--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DB_KEY="mongodb://localhost:27017/members-only"
+DB_KEY="mongodb+srv://learningBackend:lPHHuIOxNx7ptDPg@cluster0.u9ivwqb.mongodb.net/test"
