--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.ts",
   "scripts": {
     "watch": "tsc -w",
-    "server": "nodemon",
+    "server": "nodemon server",
     "client": "npm start --prefix ../frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
