--- a/backend/package.json
+++ b/backend/package.json
@@ -10,16 +10,22 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.15",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.3",
     "mongoose": "^6.8.3",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "concurrently": "^7.6.0",
     "ts-node": "^10.9.1"
   }
