--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,7 +20,7 @@
     "vite.config.ts",
     "client/.eslintrc.cjs",
     "client/src",
-    "frontend/src/index.d.ts"
+    "client/src/index.d.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
