--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "watch": "tsc -w",
     "server": "nodemon server",
-    "client": "npm start --prefix ../frontend",
+    "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
@@ -22,7 +23,8 @@
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/multer": "^1.4.7",
