--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "express-validator": "^6.14.3",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0"
