--- a/server/package.json
+++ b/server/package.json
@@ -13,23 +13,30 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "@types/passport-strategy": "^0.2.35",
     "@types/uuid": "^9.0.0",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.3",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.6",
     "@types/multer": "^1.4.7",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "concurrently": "^7.6.0",
     "ts-node": "^10.9.1"
   }
