--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "form-data": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
