--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,11 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "typescript": "^4.9.5",
@@ -34,8 +36,10 @@
   },
   "devDependencies": {
     "@types/express-session": "^1.17.6",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "concurrently": "^7.6.0",
     "ts-node": "^10.9.1"
